Thu Apr 20 15:38:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.1.3

Thu Apr 20 14:37:14 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed main part of bug with MSet docid merging in MultiMatch.
	  Will still fail to do collapse operation across multiple databases.

Thu Apr 20 13:20:33 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed some memory leaks.

Thu Apr 20 13:06:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a test for multimatch's document ID merging to apitest

Thu Apr 20 12:53:12 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added some memory leak checking in the test suite driver.

Thu Apr 20 12:06:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Stopped SleepyDatabase aborting nastily when an attempt to
	  open in a non existent directory is performed.

Wed Apr 19 18:45:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* parameter checks when opening databases now throw
	  OmInvalidArgumentError exceptions, rather than just being Asserts.

Wed Apr 19 18:10:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Changed PostList::get_position_list() to be non-const, since it
	  modifies the PostList in many implementations.

	* Implemented SleepyPositionList.

Wed Apr 19 16:47:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a PositionList base class, and methods to return position
	  lists from postlists.  No actual PositionLists yet implemented.

	* Fixed a resource (memory and file descriptor) leak in Muscat36
	  backends.

Tue Apr 18 16:42:03 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Made OmDocumentContents contain OmDatas and OmKeys rather than
	  strings.  Added constructors to OmData and OmKey.

Tue Apr 18 15:43:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
